# SNPE_Tutorial

./: CMakeLists.txt  README.md  build.sh
sample/: CMakeLists.txt  main.cpp
sample-alg/: AlgYolov8s-3rd.cpp  AlgYolov8s-3rd.h  AlgYolov8s-3rd.json  CMakeLists.txt  Common.h
yolov8s/: SNPETask.cpp  YOLOv8s.cpp  YOLOv8s.h  utils.h
